// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`supports .-_ in qualifiers 1`] = `
{
  "input": "payments.plan-type_is:enterprise",
  "result": [
    "[qualKey] payments.plan-type_is (text=payments.plan-type_is:)",
    "[qualVal] enterprise",
  ],
}
`;

exports[`supports @.-_ in qualifier values 1`] = `
{
  "input": "email:jane@example.com type:public-company_x",
  "result": [
    "[qualKey] email (text=email:)",
    "[qualVal] jane@example.com",
    "[space]",
    "[qualKey] type (text=type:)",
    "[qualVal] public-company_x",
  ],
}
`;

exports[`supports freeform search mixed throughout 1`] = `
{
  "input": "freeform1 age:5 freeform2 search",
  "result": [
    "[string] freeform1",
    "[space]",
    "[qualKey] age (text=age:)",
    "[qualVal] 5",
    "[space]",
    "[string] freeform2",
    "[space]",
    "[string] search",
  ],
}
`;

exports[`supports multiple values on the same key 1`] = `
{
  "input": "user:[jane, john doe] release:[12.0]",
  "result": [
    "[qualKey] user (text=user:)",
    "[lbracket]",
    "[qualVal] jane",
    "[comma]",
    "[qualVal] john doe (text= john doe)",
    "[rbracket]",
    "[space]",
    "[qualKey] release (text=release:)",
    "[lbracket]",
    "[qualVal] 12.0",
    "[rbracket]",
  ],
}
`;

exports[`supports operators 1`] = `
{
  "input": "num_members:>5.0",
  "result": [
    "[qualKey] num_members (text=num_members:)",
    "[qualOp] >",
    "[qualVal] 5.0",
  ],
}
`;

exports[`supports qualifiers 1`] = `
{
  "input": "plan:enterprise age:5",
  "result": [
    "[qualKey] plan (text=plan:)",
    "[qualVal] enterprise",
    "[space]",
    "[qualKey] age (text=age:)",
    "[qualVal] 5",
  ],
}
`;

exports[`supports quoted qualifiers 1`] = `
{
  "input": "user:\\"john doe\\"",
  "result": [
    "[qualKey] user (text=user:)",
    "[quote]",
    "[qualVal] john doe",
    "[quote]",
  ],
}
`;

exports[`treats freeform as a string 1`] = `
{
  "input": "freeform",
  "result": [
    "[string] freeform",
  ],
}
`;
